# drode

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: activity.rs  claude.rs  conversations.rs  files.rs  github.rs  mod.rs  oauth.rs  ports.rs  projects.rs  supabase.rs  terminal.rs  vercel.rs
src-tauri/src/db/: activity.rs  conversations.rs  migrate_json.rs  mod.rs  oauth.rs  projects.rs  schema.rs  search.rs  settings.rs
src/main/: main.ts  preload.ts
src/renderer/: App.tsx  main.tsx
src/renderer/components/ActivityLog/: ActivityEvent.tsx  ActivityLog.tsx
src/renderer/components/Chat/: Chat.tsx  ChatMessage.tsx  LoadingIndicator.tsx  ToolExecutionCard.tsx  ToolSummary.tsx
src/renderer/components/CodeEditor/: CodeEditor.tsx
src/renderer/components/ConversationList/: ConversationList.tsx
src/renderer/components/Database/: DatabasePanel.tsx  QueryEditor.tsx  QueryResults.tsx  RowEditor.tsx  TableList.tsx  TableViewer.tsx
src/renderer/components/Deployments/: DeployButton.tsx  DeploymentDetail.tsx  DeploymentList.tsx  DeploymentsPanel.tsx  DomainManager.tsx
src/renderer/hooks/: useConversation.ts  useEditorTabs.ts  useFileCache.ts  useFileSystem.ts  useLayout.ts  usePermissions.ts  useProject.ts
src/renderer/services/: activityBus.ts  claudeCodeBridge.ts  tauri-api.ts
src/renderer/stores/: activityStore.ts  authStore.ts  conversationStore.ts  editorStore.ts  fileSystemStore.ts  githubStore.ts  layoutStore.ts  permissionStore.ts  previewStore.ts  projectStore.ts  supabaseStore.ts  vercelStore.ts
src/renderer/styles/: index.css
src/renderer/types/: index.ts
src/renderer/utils/: fileUtils.ts
(+19 files in other folders)
