[package]
name = "drode"
version = "1.0.0"
description = "Desktop GUI wrapper for Claude Code CLI"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "drode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
notify = "6"
dirs = "5"
chrono = "0.4"
trash = "4"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
